--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,6 +87,11 @@ body {
   width: auto;
 }
 
+.blurry-text {
+  color: transparent;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
 .flex-item {
   text-align: center;
 }
