--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,7 @@ a {
   background: black;
   color: antiquewhite;
   border-radius: 10px;
+  animation: 0.6s ease-out 0s 1 slideInFromLeft;
 }
 
 #share-location-button {
@@ -134,6 +135,7 @@ a {
 }
 
 #message-thread {
+  animation: 1s ease-out 0s 1 slideInFromRight;
   border: 1px solid black;
   border-radius: 50px;
   padding-left: 0.5em;
@@ -154,4 +156,22 @@ a {
 
 #message-thread::-webkit-scrollbar {
   display: none;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(200%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
