--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,14 +57,23 @@ a {
 }
 
 #message-text {
+  color: #9147ff;
+  caret-color: #9147ff;
+  padding: 0.54em;
+  font-size: x-large;
   height: 200px;
   width: 200px;
   text-align: unset;
   display: block;
   background: black;
-  color: antiquewhite;
   border-radius: 10px;
   animation: 0.6s ease-out 0s 1 slideInFromLeft;
+}
+
+#message-text::selection {
+  font-size: xx-large;
+  background-color: #9147ff;
+  color: whitesmoke;
 }
 
 #share-location-button {
@@ -178,7 +187,11 @@ a {
 }
 
 .message-element-span {
-  width: 79%;
+  /* width: 79%; */
+  font-weight: bolder;
+  padding-top: 0.7em;
+  padding-bottom: 0.5em;
+  margin-top: 1em;
   overflow: hidden;
   display: block;
   padding-left: 1em;
@@ -186,8 +199,11 @@ a {
 }
 
 .username-span {
+  margin-right: 0.31em;
+  padding-right: 0.65em;
+  padding-left: 1em;
   color: #18181b;
-  display: block;
+  /* display: block; */
   font-weight: bolder;
 }
 
@@ -236,6 +252,10 @@ a {
   display: none;
 }
 
+.moving {
+  animation: moveAround 2s infinite;
+}
+
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
@@ -251,5 +271,28 @@ a {
   }
   100% {
     transform: translateX(0);
+  }
+}
+
+@keyframes moveAround {
+  0% {
+    top: 0px;
+    left: 0px;
+  }
+  25% {
+    top: 0px;
+    left: 100px;
+  }
+  50% {
+    top: 100px;
+    left: 100px;
+  }
+  75% {
+    top: 100px;
+    left: 0px;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
   }
 }
