Updated prettier and eslint. Seem to be working...

--- a/public/css/terminalTextRender.css
+++ b/public/css/terminalTextRender.css
@@ -3,7 +3,7 @@
 }
 .console-underscore {
   color: purple;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-weight: bolder;
   font: message-box;
   display: inline-block;
