--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,7 +118,7 @@ a {
 
 #submit-button,
 #share-location-button {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 0.8pc;
 }
 
