--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,16 @@ a {
   font-weight: bolder;
 }
 
+#index-main {
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+
+#index-header {
+  color: white;
+}
+
 .bright {
   background-color: white !important;
   color: black !important;
@@ -38,8 +48,10 @@ a {
 }
 
 #main-container {
-  height: 65%;
-  display: flex;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 2fr);
   align-items: center;
   justify-content: center;
 }
@@ -50,19 +62,42 @@ a {
 }
 
 #heading {
-  padding: 0.2em;
-  margin-bottom: 12px;
+  /* width: 55%; */
   border-radius: 10px;
+  text-align: center;
+  grid-column: 2 / 4;
+  grid-row: 1;
   background-color: whitesmoke;
 }
 
+#heading:hover {
+  box-shadow: rgba(150, 144, 144, 0.35) 0px 5px 15px;
+}
+
+#parent-message-text {
+  height: 100%;
+  grid-column: 1;
+  grid-row: 1 / 5;
+}
+
+#child-message-text {
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+
+#button-div {
+  margin: 10%;
+  grid-column: 1;
+  grid-row: 5;
+}
+
 #message-text {
+  width: 83%;
   color: #9147ff;
   caret-color: #9147ff;
   padding: 0.54em;
   font-size: x-large;
-  height: 200px;
-  width: 200px;
   text-align: unset;
   display: block;
   background: black;
@@ -227,11 +262,9 @@ a {
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
-.flex-item {
-  text-align: center;
-}
-
 #message-thread {
+  grid-column: 2 / 5;
+  grid-row: 2 / 5;
   animation: 1s ease-out 0s 1 slideInFromRight;
   border: 1px solid black;
   border-radius: 50px;
@@ -241,8 +274,8 @@ a {
   background-color: #18181b;
   scrollbar-width: none;
   overflow-y: scroll;
-  height: 75%;
-  width: 43%;
+  height: 89%;
+  width: 83%;
   list-style: none;
 }
 
