--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,6 +105,44 @@ a {
   animation: 0.6s ease-out 0s 1 slideInFromLeft;
 }
 
+#active-users-list {
+  scrollbar-width: none;
+  overflow-y: scroll;
+  min-height: 10%;
+  max-height: 100%;
+  margin: 10%;
+  text-align: center;
+  border-radius: 10px;
+  grid-column: 4/ 5;
+  grid-row: 1;
+  background-color: black;
+}
+
+#active-users-list > h3 {
+  font-size: x-large;
+  color: antiquewhite;
+}
+
+#active-users-list::-webkit-scrollbar {
+  display: none;
+}
+
+#users-list {
+  padding-left: 22%;
+  padding-right: 19%;
+  list-style-type: none;
+  font-style: oblique;
+  font-weight: 900;
+  font-size: large;
+}
+
+#users-list > li {
+  margin-top: 7%;
+  background-color: whitesmoke;
+  border-radius: 50px;
+  border: 1px solid white;
+}
+
 #message-text::selection {
   font-size: xx-large;
   background-color: #9147ff;
