--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,10 +25,12 @@ a {
 }
 
 #index-header {
+  text-align: center;
   color: white;
 }
 
 #sign-up-list {
+  padding-left: 3em;
   list-style: none;
 }
 
@@ -37,7 +39,16 @@ a {
   color: black !important;
 }
 
+#join-room-div {
+  background-color: black;
+  border: 0px solid white;
+  padding: 2em;
+  border-radius: 30px;
+}
+
 .join-input {
+  font-size: larger;
+  transition-duration: 500ms;
   padding: 1em;
   margin: 1em;
   display: block;
@@ -49,6 +60,21 @@ a {
   outline: none;
   font-size: medium;
   font-weight: bold;
+}
+
+#sign-up-form {
+  background-color: black;
+  border: 1px solid whitesmoke;
+  border-radius: 30px;
+  padding: 1em;
+}
+
+#sign-up-form:hover,
+#join-room-div:hover,
+#room-count:hover {
+  transform: translate(-1%, -1%);
+  transition-duration: 120ms;
+  box-shadow: rgba(199, 194, 194, 0.35) 0px 5px 15px;
 }
 
 #main-container {
@@ -332,11 +358,74 @@ a {
 
 .moving {
   animation: moveAround 2s infinite;
+  border-radius: 20px;
 }
+
+#room-count {
+  text-align: center;
+  font-weight: bold;
+  padding: 0.5em;
+  border-radius: 12px;
+  background-color: whitesmoke;
+}
+
 .room-counter {
+  font-weight: bold;
+  padding: 0.7em;
+  border-radius: 30px;
+  background-color: #9147ff;
   font-size: larger;
   text-align: center;
   color: antiquewhite;
+}
+
+#room-select {
+  display: block;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: 700;
+  color: black;
+  line-height: 1.3;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid rgb(19, 18, 18);
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: 0.5em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right 0.7em top 50%, 0 0;
+  background-size: 0.65em auto, 100%;
+}
+
+#room-select:hover {
+  border-color: rgb(15, 15, 15);
+}
+
+#room-select:focus {
+  border-color: rgb(12, 12, 12);
+  box-shadow: 0 0 1px 3px rgba(170, 6, 129, 0.7);
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222;
+  outline: none;
+}
+
+#room-select option {
+  font-weight: normal;
+}
+
+#room-select:disabled,
+.select-css[aria-disabled='true'] {
+  color: graytext;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
 }
 
 @keyframes slideInFromLeft {
