--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,11 @@ a {
   font-weight: bold;
 }
 
+.blur-element {
+  box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.3);
+  filter: blur(10px);
+}
+
 #sign-up-form {
   background-color: black;
   border: 1px solid whitesmoke;
@@ -72,8 +77,9 @@ a {
 #sign-up-form:hover,
 #join-room-div:hover,
 #room-count:hover {
+  background-color: rgb(37, 36, 36);
   transform: translate(-1%, -1%);
-  transition-duration: 120ms;
+  transition-duration: 500ms;
   box-shadow: rgba(199, 194, 194, 0.35) 0px 5px 15px;
 }
 
