--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,6 +220,30 @@ a {
   background-color: purple;
 }
 
+#fetch-older-messages {
+  z-index: 0;
+  width: 40%;
+  margin-top: 1em;
+  border: 1px solid black;
+  border-radius: 30px;
+  padding: 0.9em;
+  background-color: #9147ff;
+  color: antiquewhite;
+  font-weight: 600;
+  grid-column: 4 / 4;
+  grid-row: 2 / 2;
+}
+
+#fetch-older-messages:hover {
+  background-color: white;
+  color: black;
+  /* font-size: large; */
+}
+
+#fetch-older-messages:focus {
+  outline: none;
+}
+
 #message-text:hover,
 #message-text:focus {
   border: 1px solid #9147ff;
