--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,6 +145,7 @@ a {
 }
 
 #pm-users-list > li {
+  text-align: center;
   background-color: whitesmoke;
   border-radius: 6px;
   border: 1px solid white;
@@ -156,9 +157,9 @@ a {
 }
 
 .sent-pm-li {
-  background-color: black;
-  color: white;
-  border: 1px solid grey;
+  background-color: black !important;
+  color: white !important;
+  border: 1px solid grey !important;
 }
 
 .new-pm {
@@ -212,7 +213,7 @@ a {
   font-size: x-large;
   text-align: unset;
   display: block;
-  background: black;
+  background: rgb(44, 43, 43);
   border-radius: 10px;
 }
 
@@ -501,6 +502,7 @@ a {
 }
 
 #pm-list {
+  visibility: hidden;
   height: 50%;
   margin-left: 35%;
   border: 1px solid white;
@@ -514,11 +516,15 @@ a {
 }
 
 #pm-list > li {
+  text-align: center;
   background-color: grey;
   border: 1px solid white;
   color: white;
   font-weight: 700;
   padding: 3%;
+  margin-bottom: 2%;
+  margin-left: 12%;
+  margin-right: 28%;
 }
 
 #message-thread:hover {
