toggle style on user PM selection

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,6 +162,11 @@ a {
   text-align: center;
 }
 
+.selected-user-pm {
+  border: 1px solid grey;
+  color: grey;
+}
+
 .sent-pm-li {
   background-color: black !important;
   color: white !important;
