show clear errors on failed sign up

--- a/public/css/snackbar.css
+++ b/public/css/snackbar.css
@@ -11,6 +11,7 @@
   z-index: 1;
   left: 50%;
   font-weight: bold;
+  font-size: x-large;
   bottom: 30px;
   box-shadow: rgba(199, 194, 194, 0.35) 0px 5px 15px;
 }
