--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 :root {
   --primaryColor: #9147ff;
+  --blueChoice: #25a3e2;
+  --orangeChoice: #dc541f;
+  --greenChoice: #15ac59;
+  --purpleChoice: #9147ff;
 }
 
 html,
@@ -636,6 +640,73 @@ a {
 .user-tag {
   font-variant-ligatures: historical-ligatures;
   font-weight: bolder;
+}
+
+.dropbtn {
+  background-color: var(--primaryColor);
+  border-radius: 12px;
+  color: white;
+  padding: 1em;
+  font-size: larger;
+  border: none;
+  cursor: pointer;
+}
+
+#dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #2e2c2c;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+#blue-option {
+  background-color: var(--blueChoice);
+}
+
+#green-option {
+  background-color: var(--greenChoice);
+}
+
+#orange-option {
+  background-color: var(--orangeChoice);
+}
+
+#purple-option {
+  background-color: var(--purpleChoice);
+}
+
+#blue-option #green-option #orange-option #purple-option {
+  font-size: larger;
+  margin-top: 0.3em;
+  color: black;
+  text-align: center;
 }
 
 @keyframes slideInFromLeft {
