--- a/public/css/style.css
+++ b/public/css/style.css
@@ -643,6 +643,7 @@ a {
 }
 
 .dropbtn {
+  display: inline;
   background-color: var(--primaryColor);
   border-radius: 12px;
   color: white;
@@ -665,15 +666,17 @@ a {
   z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content button {
+  font-size: larger;
+  width: 100%;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
+.dropdown-content button:hover {
+  font-size: xx-large;
 }
 
 .dropdown:hover .dropdown-content {
