--- a/public/css/style.css
+++ b/public/css/style.css
@@ -473,6 +473,19 @@ a {
   padding: 1em;
 }
 
+.expire-msg {
+  text-align: center;
+  background-color: red !important;
+  border: 3px solid red;
+  border-radius: 0;
+  font-weight: bolder;
+  animation-name: thumb;
+  animation-duration: 450ms;
+  animation-timing-function: linear;
+  transform-origin: 50% 50%;
+  animation-iteration-count: infinite;
+}
+
 .pm-message {
   background-color: grey;
   width: 54%;
@@ -768,5 +781,17 @@ a {
   100% {
     top: 0px;
     left: 0px;
+  }
+}
+
+@keyframes wobble {
+  0% {
+    -webkit-transform: rotate(3deg);
+  }
+  50% {
+    -webkit-transform: rotate(-3deg);
+  }
+  100% {
+    -webkit-transform: rotate(3deg);
   }
 }
