--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,6 +284,7 @@ a {
 #active-users-list {
   scrollbar-width: none;
   overflow-y: scroll;
+  overflow: visible;
   min-height: 10%;
   max-height: 100%;
   margin: 10%;
@@ -304,6 +305,7 @@ a {
 }
 
 #users-list {
+  overflow: visible;
   padding-left: 22%;
   padding-right: 19%;
   list-style-type: none;
@@ -313,6 +315,8 @@ a {
 }
 
 #users-list > li {
+  overflow: visible;
+  position: relative;
   margin-top: 7%;
   background-color: whitesmoke;
   border-radius: 50px;
@@ -325,6 +329,21 @@ a {
   border-radius: 11px !important;
   font-weight: bolder !important;
   font-style: oblique !important;
+}
+
+.active-tooltip {
+  font-size: medium;
+  border: 2px solid white;
+  z-index: 3;
+  padding: 10px;
+  border-radius: 40px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: var(--primaryColor);
+  background-color: #2e2c2c;
+  visibility: visible;
+  border: 1px solid black;
 }
 
 #message-text::selection {
