--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,18 @@ a {
   font-weight: bolder;
 }
 
+.title-heading {
+  color: var(--primaryColor);
+}
+
+#main-heading {
+  transition-duration: 1.33s;
+  padding: 1em;
+  color: white;
+  border: 1px solid black;
+  background-color: rgb(14, 13, 13);
+}
+
 #index-main {
   place-items: center;
   height: 100%;
@@ -40,6 +52,7 @@ a {
 
 #sign-up-list {
   padding-left: 3em;
+  margin-top: 4em;
   list-style: none;
 }
 
@@ -92,6 +105,18 @@ a {
   border: 1px solid whitesmoke;
   border-radius: 30px;
   padding: 1em;
+}
+
+#login-form {
+  transition-duration: 1.33s;
+  height: 81%;
+}
+
+#login-form:hover,
+#main-heading:hover {
+  background-color: #1f1f23;
+  border-radius: 0px;
+  border: none;
 }
 
 #sign-up-form:hover,
@@ -382,12 +407,14 @@ a {
 }
 
 #submit-button {
+  margin-left: 20%;
+  width: 45%;
   background-color: var(--primaryColor);
   border-radius: 30px;
   border: 1px solid black;
   color: antiquewhite;
   font-weight: 600;
-  margin-top: 1em;
+  margin-top: 3em;
   padding: 0.9em;
 }
 
@@ -401,6 +428,10 @@ a {
   font-weight: 800;
   margin-top: 1em;
   padding: 0.9em;
+}
+
+#create-room-button:focus {
+  outline: none;
 }
 
 #room-name-input {
@@ -430,6 +461,7 @@ a {
 }
 
 #create-room-div {
+  margin-top: 4em;
   border-radius: 10px;
   border: 1px solid #2e2c2c;
   padding: 3em;
@@ -695,11 +727,30 @@ a {
 }
 
 #room-count {
+  padding-top: 0.3em;
+  padding-left: 3em;
+  padding-right: 3em;
+  scrollbar-width: none;
+  margin-bottom: 12%;
+  height: 78%;
+  overflow: scroll;
   text-align: center;
   font-weight: bold;
-  padding: 0.5em;
   border-radius: 12px;
   background-color: whitesmoke;
+}
+
+#room-count .room-counter {
+  transition: background-color;
+  transition-duration: 1.3s;
+}
+
+#room-count .room-counter:hover {
+  background-color: black;
+}
+
+#room-count::-webkit-scrollbar {
+  display: none;
 }
 
 .room-counter {
