--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,12 +28,27 @@ a {
 }
 
 .title-heading {
+  display: block;
   color: var(--primaryColor);
 }
 
+.title-heading::first-letter {
+  font-size: 2em;
+  font-variant: small-caps;
+  font-style: italic;
+  color: antiquewhite;
+}
+
 #main-heading {
+  position: fixed;
+  top: 0;
+  margin-top: 0;
+  width: 100%;
+  text-align: center;
   transition-duration: 1.33s;
-  padding: 1em;
+  padding-bottom: 1em;
+  padding-top: 0.7em;
+  /* padding-left: 45%; */
   color: white;
   border: 1px solid black;
   background-color: rgb(14, 13, 13);
@@ -101,6 +116,8 @@ a {
 
 #sign-up-form,
 #login-form {
+  z-index: 1;
+  margin-top: 7em;
   background-color: black;
   border: 1px solid whitesmoke;
   border-radius: 30px;
@@ -108,8 +125,9 @@ a {
 }
 
 #login-form {
+  padding-bottom: 0;
   transition-duration: 1.33s;
-  height: 81%;
+  height: 61%;
 }
 
 #login-form:hover,
