--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,10 +48,24 @@ a {
   transition-duration: 1.33s;
   padding-bottom: 1em;
   padding-top: 0.7em;
-  /* padding-left: 45%; */
   color: white;
   border: 1px solid black;
   background-color: rgb(14, 13, 13);
+}
+
+#heading,
+#active-users-list {
+  z-index: 1;
+}
+
+#chat-title-heading {
+  border: 0.5px solid var(--primaryColor);
+  background-color: #303443;
+  padding: 0.4em;
+  margin: 0.5em;
+  font-size: 2em;
+  position: absolute;
+  left: 0;
 }
 
 #index-main {
@@ -168,7 +182,7 @@ a {
 
 #heading {
   border: 1.4px solid var(--primaryColor);
-  /* width: 55%; */
+  padding-top: 2em;
   border-radius: 10px;
   text-align: center;
   grid-column: 2 / 4;
@@ -192,7 +206,7 @@ a {
   place-items: center;
 }
 
-#button-div {
+#chat-button-div {
   margin: 10%;
   grid-column: 1;
   grid-row: 5;
