--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,16 @@ a {
   font-weight: bolder;
 }
 
+hr {
+  color: white;
+  border-top: 1px solid #ccc;
+  border: 0;
+  display: block;
+  height: 1px;
+  margin: 1em 0;
+  padding: 0;
+}
+
 .title-heading {
   display: block;
   color: var(--primaryColor);
@@ -444,29 +454,52 @@ a {
   background-color: black;
 }
 
+#button-parent {
+  display: grid;
+  place-items: center;
+}
+
 #submit-button {
+  margin-top: 2em;
+  margin-bottom: 2em;
+  font-size: large;
+  font-weight: bold;
+  display: block;
   padding: 1em;
   margin-left: 0;
-  width: 45%;
+  width: 65%;
   background-color: var(--primaryColor);
-  border-radius: 30px;
+  border-radius: 5px;
   border: 1px solid black;
   color: antiquewhite;
   font-weight: 600;
-  margin-top: 3em;
   padding: 0.9em;
 }
 
 #create-room-button {
   font-size: medium;
-  margin-left: 3em;
-  background-color: var(--primaryColor);
+  background-color: rgb(6, 63, 6);
   border-radius: 27px;
   border: 1px solid black;
   color: antiquewhite;
   font-weight: 800;
-  margin-top: 1em;
   padding: 0.9em;
+}
+
+#create-channel-button {
+  font-size: medium;
+  background-color: rgb(6, 63, 6);
+  border-radius: 27px;
+  border: 1px solid black;
+  color: rgb(247, 246, 245);
+  font-weight: 800;
+  padding: 0.9em;
+}
+
+#or-span {
+  margin: 1.3em;
+  font-weight: bold;
+  color: white;
 }
 
 #login-form #submit-button {
@@ -524,7 +557,9 @@ a {
   background-color: black;
 }
 
-#submit-button:hover {
+#submit-button:hover,
+#create-room-button:hover,
+#create-channel-button:hover {
   background-color: rgb(19, 18, 19);
 }
 
@@ -811,9 +846,9 @@ a {
 }
 
 .room-counter {
-  font-weight: bold;
+  font-weight: 600;
   padding: 0.7em;
-  border-radius: 30px;
+  border-radius: 16px;
   background-color: var(--primaryColor);
   font-size: larger;
   text-align: center;
@@ -821,6 +856,7 @@ a {
 }
 
 #room-select {
+  margin-top: 0.3em;
   display: block;
   font-size: 16px;
   font-family: sans-serif;
@@ -828,10 +864,10 @@ a {
   color: black;
   line-height: 1.3;
   padding: 0.6em 1.4em 0.5em 0.8em;
-  width: 100%;
+  width: 65%;
   max-width: 100%;
   box-sizing: border-box;
-  margin: 0;
+  /* margin: 0; */
   border: 1px solid rgb(19, 18, 18);
   box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
   border-radius: 0.5em;
