--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,10 @@
   --backgroundColor: #1f1f23;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
 html,
 body {
   height: 100%;
@@ -223,11 +227,13 @@ hr {
 }
 
 #pm-div {
-  height: 100%;
+  padding-left: 15px;
+  padding-right: 10px;
+  overflow: hidden;
   background-color: black;
   border: 1px solid whitesmoke;
   height: 25%;
-  width: 25%;
+  width: 32%;
   position: absolute;
   right: 0;
   bottom: 0;
@@ -782,7 +788,7 @@ hr {
   height: 75%;
   margin-left: 35%;
   border: 1px solid white;
-  border-radius: 50px;
+  border-radius: 2px;
   padding-left: 0.5em;
   padding-right: 0.5em;
   background-color: #18181b;
@@ -801,7 +807,7 @@ hr {
   padding: 3%;
   margin-bottom: 2%;
   margin-left: 12%;
-  margin-right: 28%;
+  margin-right: 1%;
 }
 
 #message-thread:hover {
