--- a/public/css/channel.css
+++ b/public/css/channel.css
@@ -28,13 +28,34 @@ body {
 }
 
 .emoji-div {
-  text-align: center;
-  border: 0.54px solid var(--primaryColor);
-  padding: 1em;
   border-bottom: none;
   border-left: none;
   border-right: none;
+  border: 0.54px solid var(--primaryColor);
   margin: 0;
+  padding: 1em;
+  text-align: center;
+  transition-duration: 500ms;
+}
+
+.liked {
+  border: none;
+  background-color: rgb(4, 61, 4);
+}
+
+.disliked {
+  border: none;
+  background-color: rgb(240, 21, 21);
+}
+
+.liked-border {
+  border-radius: 54px;
+  border: 3px solid rgb(4, 61, 4) !important;
+}
+
+.disliked-border {
+  border-radius: 54px;
+  border: 3px solid rgb(240, 21, 21) !important;
 }
 
 .emoji {
@@ -98,13 +119,13 @@ body {
   border: 0.54px solid var(--primaryColor);
   color: antiquewhite;
   font-size: medium;
-  /* margin-bottom: 5em; */
-  /* margin-top: 5em; */
-  padding-top: 2em;
-  padding-right: 0;
-  padding-left: 0;
+  overflow: hidden;
   padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 2em;
   transition-duration: 1.4s;
+  transition-duration: 1200ms;
   width: 45%;
 }
 
