delete post function for the internal class

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -900,6 +900,7 @@ a:hover {
 
 #room-select {
   margin-top: 0.3em;
+  margin-bottom: 0.5em;
   display: block;
   font-size: 16px;
   font-family: sans-serif;
